deploy: c022c4dde2d1bbdf66b744e4514953d91b35c3fd

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
     <meta name="description" content="KOTOCA status / gitstatus - サービス稼働状況をリアルタイムで確認">
     <meta name="keywords" content="status, uptime, API, monitoring">
-    <link rel="icon" href="https://kotoca.net/KOTOCA(1).webp" type="image/x-icon">
+    <link rel="icon" href="https://kotoca.net/KOTOCA.webp" type="image/x-icon">
     
     <!-- OGP -->
     <meta property="og:title" content="KOTOCA status / gitstatus">
     <meta property="og:description" content="KOTOCA status / gitstatus - サービス稼働状況をリアルタイムで確認">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://kotoca.net/KOTOCA(1).webp">
+    <meta property="og:image" content="https://kotoca.net/KOTOCA.webp">
     <meta property="og:site_name" content="KOTOCA status / gitstatus">
     <meta property="og:locale" content="ja_JP">
 
@@ -21,11 +21,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="KOTOCA status / gitstatus">
     <meta name="twitter:description" content="KOTOCA status / gitstatus - サービス稼働状況をリアルタイムで確認">
-    <meta name="twitter:image" content="https://kotoca.net/KOTOCA(1).webp">
+    <meta name="twitter:image" content="https://kotoca.net/KOTOCA.webp">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
     <header>
+        <img src="https://kotoca.net/KOTOCA.webp" alt="logo">
         <h1>サービスステータス</h1>
         <p>最後の更新: <span></span></p>
     </header>
@@ -33,9 +35,43 @@
     <main">
         <section>
             <h2>サービス一覧</h2>
-            <ul>
-            </ul>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            <h2>サービス一覧</h2>
+            
         </section>
     </main>
+    <script>
+        window.addEventListener('scroll', () =>
+            document.body.classList.toggle('scrolled', scrollY > 80)
+        );
+    </script>
 </body>
 </html>
