deploy: 7ce39c68490472ac942f832c0d4aab02a418847b

--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
 <p>現在発生中の障害はありません</p>
 </div>
         </section>
+        <section>
+            <h2>サービス一覧</h2>
+            <div id="services_div">
+            </div>
+        </section>
+        <section style="height: 1000px;">
+            <h2>過去の障害</h2>
+            <div id="incidented_div">
+            </div>
+        </section>
     </main>
     <script>
         window.addEventListener('scroll', () =>
