--- a/src/index.html
+++ b/src/index.html
@@ -39,18 +39,15 @@
     <main>
         <section id="incidents">
             <h2>現在の障害状況</h2>
-            <div id="incidents_div">
-            </div>
+            <div id="incidents_div"></div>
         </section>
         <section>
             <h2>サービス一覧</h2>
-            <div id="services_div">
-            </div>
+            <div id="services_div"></div>
         </section>
         <section style="height: 1000px;">
             <h2>過去の障害</h2>
-            <div id="incidented_div">
-            </div>
+            <div id="incidented_div"></div>
         </section>
     </main>
     <script>
