deploy: a3b3922710b0b3a9d051e095767bb2aff38095c2

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <h2>サービス一覧</h2>
             <div id="services_div">
 <div>
-<h2>kotoca_services</h2>
+<h2>内部サービス</h2>
 
 <div class="se_content">
   <h3>kotoca公式サイト</h3>
@@ -90,7 +90,7 @@
 <div class="se_a se_down"></div>
 <div class="se_a se_down"></div>
 <div class="se_a se_down"></div>
-<div class="se_a se_down"></div>
+<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -137,7 +137,6 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
 <div class="se_a se_down"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
@@ -173,58 +172,12 @@
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
-  </div>
-</div>
-</div>
-<div>
-<h2>extras</h2>
-
-<div class="se_content">
-  <h3>cloudflare workers</h3>
-  <div class="se_div">
-    <div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-  </div>
-</div>
-
-<div class="se_content">
-  <h3>GCP</h3>
-  <div class="se_div">
-    <div class="se_a se_down"></div>
-  </div>
-</div>
-
-<div class="se_content">
-  <h3>GitHub</h3>
-  <div class="se_div">
-    <div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
-<div class="se_a se_operational"></div>
 <div class="se_a se_operational"></div>
   </div>
 </div>
 </div>
 <div>
-<h2>core</h2>
+<h2>依存先サービス</h2>
 
 <div class="se_content">
   <h3>GitHub Actions</h3>
